<resources>
    <!-- App -->
    <string name="app_name">Kana</string>
    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact</string>
    <string name="action_about">About</string>
    <string name="build_number">Build Number:</string>
    <string name="version_number">1.1.3</string>
    <string name="developer_site">developed by Darren Lester (darrenlester.com)</string>
    <string name="example_header"><u>Examples</u></string>
    <string name="hiragana">Hiragana:</string>
    <string name="katakana">Katakana:</string>

    <!-- Kana Info -->
    <string name="kana_sound_content_description">Play kana pronunciation.</string>
    <string name="kana_stroke_diagram_content_description">Kana stroke diagram</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_romaji">Enable romaji</string>
    <string name="pref_description_romaji">Show romaji in reference tables</string>

    <!-- About -->
    <string name="title_activity_about">About</string>
    <string name="author">Author:</string>
    <string name="source">Source:</string>
    <string name="license">License:</string>
    <string name="acknowledgements_title">Acknowledgements</string>
    <string name="leave_review">Leave a Review</string>
    <string name="audio_clips_title"><u>Audio Clips</u></string>
    <string name="audio_clips_author">Tae Kim\'s Guide to Learning Japanese</string>
    <string name="audio_clips_source">guidetojapanese.org/learn/grammar/hiragana</string>
    <string name="audio_clips_licence">creativecommons.org/licenses/by-sa/3.0/</string>
    <string name="stroke_order_title"><u>Stroke Order Diagrams</u></string>
    <string name="stroke_order_author">D.328 and M4RC0</string>
    <string name="stroke_order_source">commons.m.wikimedia.org/wiki/Commons:Stroke_Order_Project</string>
    <string name="stroke_order_licence">creativecommons.org/licenses/by-sa/2.0/deed.en</string>
    <string name="icons_title"><u>Icons</u></string>
    <string name="icons_author">Google</string>
    <string name="icons_source">material.io/icons/</string>
    <string name="icons_licence">github.com/google/material-design-icons/blob/master/LICENSE</string>

    <!-- Contact -->
    <string name="contact_email">darren@darrenlester.com</string>
    <string name="contact_subject">kana app - feedback</string>

    <!-- Changelog -->

    <string name="changelog_title">Changelog</string>
    <!-- Changelog Entries -->
    <string name="changelog_title_1.0.0"><u>Version 1.0.0, 06/02/2017</u></string>
    <string name="changelog_description_1.0.0">Initial release.</string>

    <string name="changelog_title_1.0.1"><u>Version 1.0.1, 09/02/2017</u></string>
    <string name="changelog_description_1.0.1">Improve layout of youon tables.</string>

    <string name="changelog_title_1.1.0"><u>Version 1.1.0, 03/03/2017</u></string>
    <string name="changelog_description_1.1.0">Romaji transliterations for examples.</string>

    <string name="changelog_title_1.1.1"><u>Version 1.1.1, 03/03/2017</u></string>
    <string name="changelog_description_1.1.1">Traditional kana table layout in landscape orientation.</string>

    <string name="changelog_title_1.1.2"><u>Version 1.1.2, 21/05/2017</u></string>
    <string name="changelog_description_1.1.2">Typo fix.</string>

    <string name="changelog_title_1.1.3"><u>Version 1.1.3, 06/07/2017</u></string>
    <string name="changelog_description_1.1.3">Updated contact email address.</string>
</resources>
